dynamix/force-app/main/default/objects/communicat_o__Conversation__c/communicat_o__Conversation__c.object-meta.xml
<CustomObject>
    <description>Keeps track of various conversations with client, groups conversations based on other custom objects.</description>
    <label>Conversation</label>
    <nameField>
        <displayFormat>CON-{0000000}</displayFormat>
        <label>Conversations ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>