dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__Active__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active Conversation for an agent</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>