dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Activity_Start_Date__c</fullName>
    <description>This field signifies the start date/time of the conversation</description>
    <label>Activity Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>