dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>