dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__Display_Info__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Display_Info__c</fullName>
    <formula>BLANKVALUE(communicat_o__Customer_Name__c, communicat_o__Customer_Channel_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Info</label>
    <type>Text</type>
</CustomField>