dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Last_Activity_Date__c</fullName>
    <description>Date/time last activity was performed in this conversation</description>
    <label>Last Activity Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>