dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__LastMessage__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__LastMessage__c</fullName>
    <description>LastMessge received</description>
    <label>LastMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>