dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__unqConv__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__unqConv__c</fullName>
    <description>This field is filled as channelId.customerchannelid.whatid, channel id is the id of the channel where company receives the communication from, it could fb, whatsapp etc, customer channel id is the id of the customer, that links to the customer on that particular channel and whatid is the id of case/opportunity or any other object through which the communication takes place</description>
    <externalId>true</externalId>
    <label>unqConv</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>