dynamix/force-app/main/default/objects/communicat_o__Conversation__c/fields/communicat_o__Who_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Who_Id__c</fullName>
    <label>Who Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>