dynamix/force-app/main/default/objects/communicat_o__Conversation__c/listViews/communicat_o__All.listView-meta.xml
<ListView>
    <fullName>communicat_o__All</fullName>
    <columns>NAME</columns>
    <columns>communicat_o__Who_Id__c</columns>
    <columns>communicat_o__Channel__c</columns>
    <columns>communicat_o__Customer_Channel_Id__c</columns>
    <columns>communicat_o__Display_Info__c</columns>
    <columns>communicat_o__unqConv__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>